.metadata/.plugins/org.eclipse.cdt.ui/masb-pot-s-firmware.build.log
12:14:48 **** Incremental Build of configuration Debug for project masb-pot-s-firmware ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/components/chronoamperometry.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xE -DDEBUG -c -I../Drivers/CMSIS/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Core/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/components/chronoamperometry.d" -MT"Core/Src/components/chronoamperometry.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/components/chronoamperometry.o"
../Core/Src/components/chronoamperometry.c: In function 'ChronoamperometryManagement':
../Core/Src/components/chronoamperometry.c:36:12: error: lvalue required as left operand of assignment
    &estado = "IDLE";
            ^
../Core/Src/components/chronoamperometry.c:38:10: error: lvalue required as left operand of assignment
   &estado= "CA";
          ^
../Core/Src/components/chronoamperometry.c:45:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [Core/Src/components/subdir.mk:30: Core/Src/components/chronoamperometry.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

12:14:52 Build Failed. 3 errors, 1 warnings. (took 3s.544ms)

